# KeyboardMouseShare

./: .coverage  BUILD_STATUS.md  CSHARP_ACTION_ITEMS.md  CSHARP_BUILD_STATUS.md  CSHARP_COMPLIANCE_REVIEW.md  CSHARP_FINAL_STATUS.md  CSHARP_FIXES_APPLIED.md  DEPLOYMENT_PACKAGE.md  DESIGN_REVIEW_REPORT.md  DISCOVERY_ARCHITECTURE_CLARIFICATION.md  E2E_TESTS_STATUS.md  FINAL_RELEASE_INSTRUCTIONS.md  GITHUB_UPLOAD_COMPLETE.md  INPUTSIMULATOR_COMPLETION.md  INPUTSIMULATOR_SESSION_FINAL.md  INSTALLER_CHECKLIST.md  PROJECT_OVERVIEW.md  PROJECT_REORGANIZATION.md  PYTHON_GUIDE.md  QUICK_START.md  README_MULTI_VERSION.md  RELEASE_PUSHED_SUCCESS.md  RELEASE_v1.0.0_STATUS.md  SESSION_STATUS.md  SESSION_SUMMARY.md  WINDOWS_INSTALLER_GUIDE.md  WINDOWS_INSTALLER_SETUP.md  combined_test_output.txt  main.py  requirements.txt  test_output.txt  test_results.txt  test_results_remediated.txt  test_summary.txt
.github/agents/: copilot-instructions.md
.github/workflows/: release.yml  test.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
csharp/: CSHARP_GUIDE.md
csharp/KeyboardMouseShare/: INPUT_SIMULATOR_GUIDE.md  KeyboardMouseShare.csproj
csharp/KeyboardMouseShare/src/: App.xaml  App.xaml.cs  ConnectionService.cs  DeviceDiscoveryService.cs  InputEventApplier.cs  MainWindow.xaml  MainWindow.xaml.cs  Models.cs
csharp/KeyboardMouseShare/src/Auth/: PassphraseManager.cs
csharp/KeyboardMouseShare/src/Network/: Protocol.cs  TLSConnection.cs
csharp/KeyboardMouseShare/src/Platform/: WindowsInputSimulator.cs
csharp/KeyboardMouseShare/src/State/: ConnectionRegistry.cs  DeviceRegistry.cs  RoleStateMachine.cs
csharp/KeyboardMouseShare/tests/: KeyboardMouseShare.Tests.csproj  UnitTests.cs
docs/: BUILD.md  INSTALL.md
python/: DAYS_4-5_DISCOVERY_COMPLETE.md  PHASE_2_EXECUTION_CHECKLIST.md  PHASE_2_ROADMAP.md  PHASE_2_SPECIFICATIONS.md  PHASE_3_COMPLETE.md  PHASE_3_SPECIFICATIONS.md  PHASE_3_VERIFICATION.md  build_windows_installer.bat  build_windows_installer.ps1  demo_ui.py  keyboard_mouse_share.iss  keyboard_mouse_share.spec  pyproject.toml  requirements-build.txt  requirements.txt  ruff.toml
python/docs/: PHASE4_SUMMARY.md  PHASE5_SUMMARY.md
python/src/: config.py  logger.py
python/src/input/: __init__.py  event_applier.py  handler.py  macos.py  windows.py
python/src/models/: __init__.py  device.py  repositories.py  schema.py
python/src/network/: __init__.py  discovery.py
python/src/relay/: __init__.py  input_relay.py
python/src/ui/: dialogs.py  main_window.py  service_bridge.py
python/src/ui/widgets/: __init__.py  device_list.py
python/src/utils/: validators.py
python/tests/: conftest.py  test_config.py  test_logger.py  test_main.py  test_validators.py
python/tests/integration/: __init__.py  test_connection_tls.py  test_discovery_mdns.py  test_e2e_scenarios.py  test_phase4_e2e.py  test_phase5_e2e.py
python/tests/unit/: __init__.py  test_connection.py  test_connection_handler.py  test_device.py  test_device_communicator.py  test_discovery.py  test_event_applier.py  test_input_event.py  test_input_handlers.py  test_input_relay.py  test_layout.py  test_repositories.py  test_schema.py
python/tests/unit/ui/: __init__.py  test_connection_status_widget.py  test_device_list_widget.py  test_dialogs.py  test_service_bridge.py
specs/001-cross-device-input/: ANALYSIS_REMEDIATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-cross-device-input/checklists/: requirements.md
specs/001-cross-device-input/contracts/: network-protocol.md
